--- a/Brawl/src/css.css
+++ b/Brawl/src/css.css
@@ -1,12 +1,3 @@
-html{
-    min-height: 100%;
-}
-
-body{
-    background: -moz-linear-gradient(to top, rgb(0,0,0), rgb(0, 0, 64),
-        rgb(0, 0, 64));
-}
-
 #game{
     margin: 0px auto;
     width: 500px;
@@ -18,13 +9,39 @@ canvas{
 }
 
 button{
-    background: url(graphics/button.png) repeat-x 0px 0px;
+    background: url(graphics/button.png);
     min-width: 256px;
     min-height: 128px;
     border: none;
     color: rgb(256, 128, 0);
-    font: 24px sans-serif;
+    font: 24px 'SilkscreenExpandedBold', Arial, sans-serif;
     margin: 0 auto;
     display: block;
+}
+
+button:hover{
+    background: url(graphics/buttonHover.gif);
+}
+
+html{
+    min-height: 100%;
+}
+
+body{
+    background: -moz-linear-gradient(to top, rgb(0,0,0), rgb(0, 0, 64),
+        rgb(0, 0, 64));
+    background: -webkit-linear-gradient(90deg, rgb(0,0,0), rgb(0, 0, 64),
+        rgb(0, 0, 64));
+    background: -o-linear-gradient(to top, rgb(0,0,0), rgb(0, 0, 64),
+        rgb(0, 0, 64));
+}
+
+@font-face {
+    font-family: 'SilkscreenExpandedBold';
+    src: url('fonts/slkscreb-webfont.woff') format('woff'),
+         url('fonts/slkscreb-webfont.ttf') format('truetype'),
+         url('fonts/slkscreb-webfont.svg#SilkscreenExpandedBold') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
