--- a/Brawl/src/css.css
+++ b/Brawl/src/css.css
@@ -34,6 +34,12 @@ button{
     width: 50%;
 }
 
+@media (max-width: 1100px){
+    button{
+        font-size: 0.5em;
+    }
+}
+
 button:hover{
     background: url(graphics/buttonHover.gif) no-repeat;
 }
