New Player.spawn() function, new System Object with System.loadGame() function which calls parseMap(), drawMap(), loadImages() and creates a new Player(), new Painter.js with Painter object, new Painter.loadImages() which for now loads the player spritesheet, moved drawMap() to Painter, new PlayerImage object and PlayerImage.placeAt(x,y) function for moving the image.

--- a/Brawl/src/css.css
+++ b/Brawl/src/css.css
@@ -61,6 +61,18 @@ button:hover{
     padding: 0px;
 }
 
+#canvasMapBase{
+    z-index: 0;
+}
+
+#canvasPlayer{
+    z-index: 3;
+}
+
+#canvasMapFront{
+    z-index: 2;
+}
+
 @font-face {
     font-family: 'SilkscreenExpandedBold';
     src: url('fonts/slkscreb-webfont.woff') format('woff'),
